fix(elements|ino-list-item): fix icon alignment (#433)

--- a/packages/elements/src/components/ino-nav-item/ino-nav-item.scss
+++ b/packages/elements/src/components/ino-nav-item/ino-nav-item.scss
@@ -23,7 +23,7 @@ ino-nav-item  {
 
   .mdc-list-item,
   ino-list-item .mdc-list-item {
-    padding: 0 24px;
+    padding: 0 16px;
     height: 60px;
     background-color: var(--nav-item-background-color);
     color: var(--nav-item-color);
@@ -46,6 +46,9 @@ ino-nav-item  {
     .ino-nav-item--leading-slot {
       width: 100%;
       height: 100%;
+      display: flex;
+      justify-content: center;
+      align-content: center;
     }
 
     &.mdc-list-item--activated {
